--- a/views/content.jade
+++ b/views/content.jade
@@ -2,4 +2,5 @@ extends layout
 
 block content
    h1 Jepp
-   div(id='x_'+id, class='mdcms-content', mdcms-content-id=''+id) #{content}
+   div(id='x_'+id, class='mdcms-content', mdcms-content-id=''+id)
+    != md(content)
