--- a/views/includes/content.jade
+++ b/views/includes/content.jade
@@ -1,2 +1,2 @@
-div(id='x_'+id, class='mdcms-content', mdcms-content-id=''+id)
-  != md(content)
+div(id='x_'+(contentBlock.id), class='mdcms-content', mdcms-content-id=''+(contentBlock.id))
+  !=contentBlock.html
