Viser nå statiske filer i site-directory

--- a/views/admin-base.jade
+++ b/views/admin-base.jade
@@ -10,6 +10,7 @@ html
     script(type='text/javascript', src='/public/javascripts/admin.js')
     link(rel='import', href="/public/components/markdown-editor.html")
     meta(charset='utf-8')
+    block head
   body
       block body
         //each contentBlock in contentBlocks
