--- a/public/components/toolwindow.html
+++ b/public/components/toolwindow.html
@@ -5,14 +5,23 @@
 
 <polymer-element name="mdcms-toolwindow" attributes="title resize">
     <script>
-        Polymer("mdcms-toolwindow", {
-            domReady: function() {
-                if (this.resize == undefined) {
-                    this.resize = "both";
+        (function () {
+            Polymer("mdcms-toolwindow", {
+                domReady: function () {
+                    if (this.resize == undefined) {
+                        this.resize = "both";
+                    }
+                    this.shadowRoot.querySelector(".content-wrapper").style.resize = this.resize;
+                    var self = this;
+                    this.shadowRoot.querySelector("#closeButton").addEventListener("click", function () {
+                        self.close();
+                    });
+                },
+                close: function () {
+                    this.fire("close");
                 }
-                this.shadowRoot.querySelector(".content-wrapper").style.resize = this.resize;
-            }
-        });
+            });
+        })();
     </script>
     <template bind="title">
         <style>
@@ -57,7 +66,7 @@
         <div class="title-wrapper">
             <mdcms-draghandle draggableId=":host">{{title}}</mdcms-draghandle>
             <div class="buttons">
-                <mdcms-button></mdcms-button>
+                <mdcms-button id="closeButton"></mdcms-button>
             </div>
         </div>
         <div class="content-wrapper">
