Saving edited Markdown now works

--- a/views/admin-base.jade
+++ b/views/admin-base.jade
@@ -9,6 +9,7 @@ html
     script(src='/public/bower_components/platform/platform.js')
     link(rel='import', href='/public/bower_components/polymer/polymer.html')
     script(type='text/javascript', src='/public/javascripts/admin.js')
+    link(rel='import', href="/public/components/webdavclient.html")
     link(rel='import', href="/public/components/markdown-editor.html")
     meta(charset='utf-8')
     block head
