Saving edited Markdown now works

--- a/public/components/markdown-editor.html
+++ b/public/components/markdown-editor.html
@@ -304,6 +304,10 @@
               -webkit-box-pack: center;
               -webkit-box-align: center;
           }
+
+          #wmd-preview {
+              display: none;
+          }
 /*
           mdcms-draghandle {
               background-color: black;
@@ -326,7 +330,7 @@
               </div>
               <div id="wmd-button-bar" style="">
               </div>
-              <textarea id="wmd-input" rows="10" cols="40">![Laks meg her og der][1]
+              <textarea id="wmd-input" rows="20" cols="80">![Laks meg her og der][1]
 
 
                   [1]: https://www.google.com/images/srpr/logo11w.png</textarea>
